@@ -369,7 +369,12 @@ class Shell
 
       for p in @shell.system_path
         path = join(p, command)
-        if FileTest.exist?(path)
+        begin
+          st = File.stat(path)
+        rescue SystemCallError
+          next
+        else
+          next unless st.executable? and !st.directory?
           @system_commands[command] = path
           return path
         end
